Fix z-index glitch where game card appeared under other game cards on hover

--- a/css/menu.css
+++ b/css/menu.css
@@ -435,6 +435,7 @@ a.disabled-link:hover {
 
 .card:hover {
   transform: scale(1.15);
+  z-index:9999999;
 }
 .card {
   position: relative; /* Needed for the pseudo-element */
